--- a/src/content/index.html
+++ b/src/content/index.html
@@ -33,6 +33,15 @@
 
   <main class="main">
     <section class="main__title">TEXT INPUT</section>
+    <div class="input">
+      <input class="input__box">
+      <div class="input__button">
+        <button class="input__save">Save</button>
+        <button class="input__load">Load</button>
+      </div>
+
+    </div>
+
   </main>
 
 
