Add --js modifier.
try saving input to local sotrage

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -34,10 +34,10 @@
   <main class="main">
     <section class="main__title">TEXT INPUT</section>
     <div class="input">
-      <input class="input__box">
+      <input class="input__box input__box--js">
       <div class="input__button">
-        <button class="input__load">Load</button>
-        <button class="input__save">Save</button>
+        <button type="submit" class="input__load">Load</button>
+        <button class="input__save input__save--js">Save</button>
       </div>
 
     </div>
