Small fix on HTML

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -27,16 +27,16 @@
 </head>
 
 <body>
-  <header class="header">
-    <h2>
-      Simple-editor
-    </h2>
-  </header>
   <main class="main">
+    <header class="header">
+      <h2>
+        Simple-editor
+      </h2>
+    </header>
     <form class="form">
-      <p>
+      <p class="form__wrapper">
         <label class="form__label" for="text_input">TEXT INPUT</label>
-        <textarea class="form__text" id="text_input">
+        <textarea class="form__text_input" id="text_input">
           Enter your text
         </textarea>
       </p>
@@ -46,8 +46,8 @@
       </div>
 
     </form>
+    <footer class="footer">Made by Bartosz</footer>
   </main>
-  <footer class="footer">Made by Bartosz</footer>
   <script src="js/main.js"></script>
 </body>
 
