Add and style button to clear local storage

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -36,12 +36,12 @@
     <form class="form">
       <p class="form__wrapper">
         <label class="form__label" for="text_input">TEXT INPUT</label>
-        <textarea class="form__text_input" id="text_input">
-          Enter your text
-        </textarea>
+        <textarea class="form__text_input form__text_input--js"
+        id="text_input" placeholder="Enter your text"></textarea>
       </p>
       <div class="form__actions">
         <button class="form__button form__button--load form__button--load-js">LOAD</button>
+        <button class="form__button form__button--clear form__button--clear-js">clear local storage</button>
         <button class="form__button form__button--save form__button--save-js">SAVE</button>
       </div>
 
