Add JS class to text input

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -36,7 +36,7 @@
     <form class="form">
       <p class="form__wrapper">
         <label class="form__label" for="text_input">TEXT INPUT</label>
-        <textarea class="form__text_input form__text_input--js"
+        <textarea class="form__text_input form__text_input form__text_input--js"
         id="text_input" placeholder="Enter your text"></textarea>
       </p>
       <div class="form__actions">
