Create an element and CSS for animation and transition practice

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -47,6 +47,7 @@
 
     </form>
     <footer class="footer">Made by Bartosz</footer>
+    <div class="animation_test">Test</div>
   </main>
   <script src="js/main.js"></script>
 </body>
