--- a/index.html
+++ b/index.html
@@ -16,16 +16,17 @@
   <!-- full url with http(s) ie. https://maciejkorsan.github.io/my-repo/ -->
   <meta property="og:url" content="https://bartoszlewosz.github.io/simple-editor/" />
   <!-- full url to the image with http(s) ie. https://maciejkorsan.github.io/my-repo/assets/img/fb.png. Facebook suggests at least 1200 x 630. -->
-  <meta property="og:image" content="https://github.com/BartoszLewosz/simple-editor/blob/master/src/assets/img/android-chrome-384x384.png" />
+  <meta property="og:image"
+    content="https://github.com/BartoszLewosz/simple-editor/blob/master/src/assets/img/android-chrome-384x384.png" />
   <!-- https://github.com/BartoszLewosz/simple-editor/blob/master/src/assets/img/android-chrome-384x384.png -->
 
   <link rel="manifest" href="manifest.json" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  
+
   <link rel="apple-touch-icon" sizes="192x192" href="assets/pwa/icons/icon-192x192.png" />
   <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
   <link rel="icon" type="image/png" href="assets/img/android-chrome-192x192.png" />
-  
+
 
   <link rel="stylesheet" href="css/main.css" />
 </head>
