Update path to OpenGraph

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -16,8 +16,7 @@
   <!-- full url with http(s) ie. https://maciejkorsan.github.io/my-repo/ -->
   <meta property="og:url" content="https://bartoszlewosz.github.io/simple-editor/" />
   <!-- full url to the image with http(s) ie. https://maciejkorsan.github.io/my-repo/assets/img/fb.png. Facebook suggests at least 1200 x 630. -->
-  <meta property="og:image"
-    content="https://bartoszlewosz.github.io/simple-editor/src/assets/img/python_background.png" />
+  <meta property="og:image" content="https://bartoszlewosz.github.io/simple-editor/assets/img/python_background.png" />
   <!-- https://github.com/BartoszLewosz/simple-editor/blob/master/src/assets/img/android-chrome-384x384.png -->
 
   <link rel="manifest" href="manifest.json" />
